# zetadiffusion

./: .env.example  .gitignore  CE1_SEED_Q.md  CFE_GINI_PULSE.md  CLOCK_EXECUTION_TIME_FINDINGS.md  CLOUD_UPLOAD_SETUP.md  CONCURRENCY_STABILITY_9_11.md  CONJECTURE_9_1_2_FINDINGS.md  CONJECTURE_9_1_3_FINDINGS.md  CONJECTURE_VALIDATION_SUMMARY.md  CONTINUOUS_Q_WORKFLOW.md  DIGIT_BALLAST_9_11.md  Energy.md  FEG-0.4_Field_Manual.md  FEG_COMPRESSION_ROADMAP.md  FEG_VIDEO_ARCHITECTURE.md  Fruit.md  GINI_PULSE_ANALYSIS.md  HARMONIC_MACHINE_ARCHITECTURE.md  NEXT_STEPS.md  NOTION_SETUP.md  NOTION_UPLOAD_STANDARD.md  PLOTS_SUMMARY.md  PROJECT_STATUS.md  PUSH_SETUP.md  Q_INTEGRATION_GUIDE.md  README.md  RESEARCH_FINDINGS.md  SCRIPT_STANDARDS.md  VALIDATION_STATUS.md  WEEK2_SUMMARY.md  WITNESS_OPERATOR.md  add_github_secrets.sh  analyze_clock_execution_times.py  cloud_uploader.py  demo.py  demo_bert_compression.py  demo_compression_showcase.py  demo_crypto_predictions.py  demo_energy_harvesting.py  (+32 more)
benchmarks/: README.md  feg_compression_benchmark.py  real_world_datasets.py
feg_compression/: README.md  __init__.py  cli.py  compress.py  windowspec.py
feg_video/: CALIBRATING_GRAMMAR.md  COMPOSED_TYPES.md  FEG_SVG_0.1_SPEC.md  HARMONIC_NAMESPACE.md  README.md  STRING_TYPE_SYSTEM.md  SVG_STRING_UNIFIED.md  WAVE_BOUND_GUARANTEE.md  __init__.py  compiler.py  demo.html  demo.py  demo_strings.html  player.html  schema.py
zetadiffusion/: __init__.py  ce1_seed.py  cfe_gini.py  complex_renorm.py  compress.py  concurrency_stability.py  digit_ballast.py  dynamics.py  energy.py  field.py  (+12 more)
(+1 files in other folders)
