[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feg-compression"
version = "0.1.0"
description = "FEG Compression: Topological projection-based compression with 300-1400x ratios"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Joel", email = "joel@example.com"}
]
keywords = ["compression", "topological", "feg", "data-compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Archiving :: Compression",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "mypy>=0.950",
]
benchmark = [
    "matplotlib>=3.5.0",
]

[project.scripts]
feg-compress = "feg_compression.cli:compress_cmd"
feg-decompress = "feg_compression.cli:decompress_cmd"
feg-benchmark = "feg_compression.cli:benchmark_cmd"

[tool.setuptools]
packages = ["feg_compression"]

[tool.setuptools.package-data]
feg_compression = ["*.md", "*.txt"]




